--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
   },
   "homepage": "https://github.com/zlotny/backend-developer-test#readme",
   "dependencies": {
-    "@types/express": "^4.16.0",
     "express": "^4.16.4",
+    "mongoose": "^5.3.14",
+    "reflect-metadata": "^0.1.12",
+    "typegoose": "^5.4.1",
     "typescript": "^3.2.1"
   },
   "devDependencies": {
+    "@types/express": "^4.16.0",
     "nodemon": "^1.18.7",
     "ts-node": "^7.0.1",
     "tsconfig-paths": "^3.7.0"
