Adds routes draft, configuration and auth middleware
Started working on routing layout for express as well as integrating the
authentication middleware for Google OAuth. There's things to improve.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   "homepage": "https://github.com/zlotny/backend-developer-test#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "express-bearer-token": "^2.2.0",
+    "express-session": "^1.15.6",
+    "grant-express": "^4.2.1",
     "mongoose": "^5.3.14",
     "reflect-metadata": "^0.1.12",
     "typegoose": "^5.4.1",
