--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/zlotny/backend-developer-test#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.4",
     "express-bearer-token": "^2.2.0",
     "express-session": "^1.15.6",
