--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.18.0",
     "express": "^4.16.4",
     "express-bearer-token": "^2.2.0",
+    "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "grant-express": "^4.2.1",
     "mongoose": "^5.3.14",
