--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "grant-express": "^4.2.1",
+    "moment": "^2.22.2",
     "mongoose": "^5.3.14",
     "reflect-metadata": "^0.1.12",
     "typegoose": "^5.4.1",
-    "typescript": "^3.2.1"
+    "typescript": "^3.2.1",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
