--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "moment": "^2.22.2",
     "mongoose": "^5.3.14",
     "reflect-metadata": "^0.1.12",
+    "swagger-ui-express": "^4.0.1",
     "typegoose": "^5.4.1",
     "typescript": "^3.2.1",
     "winston": "^3.1.0"
